changes to randomize input

--- a/final_script/AdNonAdDataClassifier_Regression.ipynb
+++ b/final_script/AdNonAdDataClassifier_Regression.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -29,8 +29,46 @@
     "import statsmodels.api as sm\n",
     "import pylab as pl\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
+    "import random\n",
     "#%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Randomizing the CSV file\n",
+    "\n",
+    "f = open('../data/ready_for_logistic_clean.csv')\n",
+    "reader = csv.reader(f)\n",
+    "headers = reader.__next__()\n",
+    "\n",
+    "dt = []\n",
+    "for row in reader:\n",
+    "    dt.append(row)\n",
+    "\n",
+    "f.close()\n",
+    "\n",
+    "rand = random.sample(range(0, len(dt)), len(dt))\n",
+    "\n",
+    "rand_data = []\n",
+    "print(max(rand))\n",
+    "\n",
+    "for i in rand:\n",
+    "    print(rand[i])\n",
+    "    rand_data.append(dt[rand[i]])\n",
+    "    \n",
+    "fl = open(\"../data/ready_for_logistic_clean_1.csv\",\"w\")\n",
+    "ready_full_data = csv.writer(fl,dialect = 'excel',lineterminator='\\n')\n",
+    "ready_full_data.writerow(headers)\n",
+    "for row in rand_data:\n",
+    "    ready_full_data.writerow(row)\n",
+    "    \n",
+    "fl.close()     "
    ]
   },
   {
@@ -44,17 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dta = pd.read_csv('../data/ready_for_logistic_clean.csv')\n",
+    "dta = pd.read_csv('../data/ready_for_logistic_clean_1.csv')\n",
     "\n",
     "#printing a few statistics\n",
     "#print(dta.std())\n",
-    "div_percentage = 0.75\n",
+    "\n",
+    "div_percentage = 0.80\n",
     "train_test_boundary = math.floor(div_percentage*len(dta))\n",
     "end_boundary = len(dta)\n",
     "train_data = dta[:train_test_boundary]\n",
@@ -63,26 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "998\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(dta))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -110,25 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr',\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "logistic = LogisticRegression()\n",
     "y = data['class']\n",
@@ -145,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -162,22 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "250\n",
-      "250\n",
-      "217\n",
-      "86.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Calculating accuracy of training data set\n",
     "\n",
@@ -193,6 +188,59 @@
     "print(count)\n",
     "print(count*100/(end_boundary-train_test_boundary))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ans = logistic.predict_proba(test_data[headers_1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = []\n",
+    "y = []\n",
+    "z = []\n",
+    "for row in ans:\n",
+    "    x.append(row[0])\n",
+    "    y.append(row[1])\n",
+    "    z.append(row[0]+row[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pl.plot(x)\n",
+    "pl.plot(y)\n",
+    "pl.plot(z)\n",
+    "pl.xlabel('Testing data indices', fontsize=18)\n",
+    "pl.ylabel('Probability of class', fontsize=16)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
