--- a/final_script/Plot_Accuracy.ipynb
+++ b/final_script/Plot_Accuracy.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import sys\n",
     "import numpy as np\n",
     "import csv\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,19 +16,59 @@
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
     "import pylab as pl\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import random\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def randomize_file():\n",
+    "    f = open('../data/ready_for_logistic_clean.csv')\n",
+    "    reader = csv.reader(f)\n",
+    "    headers = reader.__next__()\n",
+    "\n",
+    "    dt = []\n",
+    "    for row in reader:\n",
+    "        dt.append(row)\n",
+    "\n",
+    "    f.close()\n",
+    "\n",
+    "    rand = random.sample(range(0, len(dt)), len(dt))\n",
+    "\n",
+    "    rand_data = []\n",
+    "    #print(max(rand))\n",
+    "\n",
+    "    for i in rand:\n",
+    "        #print(rand[i])\n",
+    "        rand_data.append(dt[rand[i]])\n",
+    "\n",
+    "    fl = open(\"../data/ready_for_logistic_clean_1.csv\",\"w\")\n",
+    "    ready_full_data = csv.writer(fl,dialect = 'excel',lineterminator='\\n')\n",
+    "    ready_full_data.writerow(headers)\n",
+    "    for row in rand_data:\n",
+    "        ready_full_data.writerow(row)\n",
+    "\n",
+    "    fl.close() \n",
+    "    return \"done\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def logistic_regression(percent):\n",
-    "    dta = pd.read_csv('../data/ready_for_logistic_clean.csv')\n",
+    "    randomize_file()\n",
+    "    dta = pd.read_csv('../data/ready_for_logistic_clean_1.csv')\n",
     "    \n",
     "    #printing a few statistics\n",
     "    #print(dta.std())\n",
@@ -77,12 +118,12 @@
     "        if predictions[i] == actual_class_val[i]:\n",
     "            count += 1\n",
     "            \n",
-    "    return count*100/(end_boundary-train_test_boundary)"
+    "    return count*100/(end_boundary-train_test_boundary)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +169,29 @@
       "74\n",
       "75\n",
       "76\n",
-      "77"
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n",
+      "99\n"
      ]
     }
    ],
@@ -138,11 +201,58 @@
     "for i in range(40,100):\n",
     "    x.append(i)\n",
     "    y.append(logistic_regression(i))\n",
-    "    print(i)\n",
-    "    \n",
-    "plt.plot(x,y)\n",
-    "plt.show()"
+    "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = logistic_regression(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sys.modules[__name__].__dict__.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "ax = pl.subplot(111)\n",
+    "\n",
+    "ax.set_xlim([40,100])\n",
+    "ax.set_ylim([70, 100])\n",
+    "pl.xlabel('Training data percentage', fontsize=18)\n",
+    "pl.ylabel('Prediction Accuracy', fontsize=16)\n",
+    "pl.plot(x,y)\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
